--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,14 +2,18 @@
 
     <!-- Base application theme. -->    
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-    <!-- Customize your theme here. -->
-    <item name="android:textColor">#2f2f2f</item>
-    <item name="android:windowDisablePreview">true</item>
-    <item name="android:windowBackground">@drawable/background_splash</item>
-  </style>
+		<!-- Customize your theme here. -->
+		<item name="android:textColor">#2f2f2f</item>
+		<item name="android:windowDisablePreview">true</item>
+		<item name="android:windowBackground">@drawable/background_splash</item>
+		<item name="android:datePickerDialogTheme">@style/Dialog.Theme</item>
+		<item name="android:timePickerDialogTheme">@style/Dialog.Theme</item>
+	</style>
 
-  <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/background_splash</item>
-    </style>
-
+	<style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+		<item name="android:windowBackground">@drawable/background_splash</item>
+	</style>
+	<style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
+		<item name="colorAccent">#eb3f55</item>
+	</style>
 </resources>
